lib/sequencer_bindings_generated.dart

// Generated bindings for sequencer.
// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: comment_references
// ignore_for_file: file_names
// ignore_for_file: library_private_types_in_public_api
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: prefer_single_quotes
// ignore_for_file: type_literal_in_constant_pattern
// ignore_for_file: unnecessary_import

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class SequencerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SequencerBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SequencerBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Initialize the audio engine
  int init() {
    return _init();
  }

  late final _initPtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>('init');
  late final _init = _initPtr.asFunction<int Function()>();

  /// Play a sound from a file
  int play_sound(
    ffi.Pointer<ffi.Char> file_path,
  ) {
    return _play_sound(
      file_path,
    );
  }

  late final _play_soundPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'play_sound');
  late final _play_sound =
      _play_soundPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Load a sound into memory
  int load_sound(
    ffi.Pointer<ffi.Char> file_path,
  ) {
    return _load_sound(
      file_path,
    );
  }

  late final _load_soundPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'load_sound');
  late final _load_sound =
      _load_soundPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Play a previously loaded sound
  int play_loaded_sound() {
    return _play_loaded_sound();
  }

  late final _play_loaded_soundPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('play_loaded_sound');
  late final _play_loaded_sound =
      _play_loaded_soundPtr.asFunction<int Function()>();

  /// Stop all currently playing sounds
  void stop_all_sounds() {
    return _stop_all_sounds();
  }

  late final _stop_all_soundsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('stop_all_sounds');
  late final _stop_all_sounds =
      _stop_all_soundsPtr.asFunction<void Function()>();

  /// Check if engine is initialized
  int is_initialized() {
    return _is_initialized();
  }

  late final _is_initializedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('is_initialized');
  late final _is_initialized = _is_initializedPtr.asFunction<int Function()>();

  /// Get current audio route info (for debugging Bluetooth connectivity)
  void log_route() {
    return _log_route();
  }

  late final _log_routePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('log_route');
  late final _log_route = _log_routePtr.asFunction<void Function()>();

  /// Manually reconfigure audio session (for testing)
  int reconfigure_audio_session() {
    return _reconfigure_audio_session();
  }

  late final _reconfigure_audio_sessionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'reconfigure_audio_session');
  late final _reconfigure_audio_session =
      _reconfigure_audio_sessionPtr.asFunction<int Function()>();

  /// Cleanup the audio engine
  void cleanup() {
    return _cleanup();
  }

  late final _cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('cleanup');
  late final _cleanup = _cleanupPtr.asFunction<void Function()>();

  /// Sequencer functions (sample-accurate timing)
  int start(
    int bpm,
    int steps,
  ) {
    return _start(
      bpm,
      steps,
    );
  }

  late final _startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('start');
  late final _start = _startPtr.asFunction<int Function(int, int)>();

  void stop() {
    return _stop();
  }

  late final _stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('stop');
  late final _stop = _stopPtr.asFunction<void Function()>();

  int is_playing() {
    return _is_playing();
  }

  late final _is_playingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('is_playing');
  late final _is_playing = _is_playingPtr.asFunction<int Function()>();

  int get_current_step() {
    return _get_current_step();
  }

  late final _get_current_stepPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_current_step');
  late final _get_current_step =
      _get_current_stepPtr.asFunction<int Function()>();

  void set_bpm(
    int bpm,
  ) {
    return _set_bpm(
      bpm,
    );
  }

  late final _set_bpmPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('set_bpm');
  late final _set_bpm = _set_bpmPtr.asFunction<void Function(int)>();

  void set_cell(
    int step,
    int column,
    int sample_slot,
  ) {
    return _set_cell(
      step,
      column,
      sample_slot,
    );
  }

  late final _set_cellPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'set_cell');
  late final _set_cell =
      _set_cellPtr.asFunction<void Function(int, int, int)>();

  void clear_cell(
    int step,
    int column,
  ) {
    return _clear_cell(
      step,
      column,
    );
  }

  late final _clear_cellPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
          'clear_cell');
  late final _clear_cell = _clear_cellPtr.asFunction<void Function(int, int)>();

  void clear_all_cells() {
    return _clear_all_cells();
  }

  late final _clear_all_cellsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('clear_all_cells');
  late final _clear_all_cells =
      _clear_all_cellsPtr.asFunction<void Function()>();

  /// Multi-grid sequencer support
  void set_columns(
    int columns,
  ) {
    return _set_columns(
      columns,
    );
  }

  late final _set_columnsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('set_columns');
  late final _set_columns = _set_columnsPtr.asFunction<void Function(int)>();

  /// Returns the number of available playback slots (always MAX_SLOTS)
  int get_slot_count() {
    return _get_slot_count();
  }

  late final _get_slot_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_slot_count');
  late final _get_slot_count = _get_slot_countPtr.asFunction<int Function()>();

  /// Loads a sound into the given slot. When loadToMemory == 1 the file will be
  /// fully decoded into memory for lowest-latency playback. When 0 the file will
  /// be streamed from disk.
  int load_sound_to_slot(
    int slot,
    ffi.Pointer<ffi.Char> file_path,
    int loadToMemory,
  ) {
    return _load_sound_to_slot(
      slot,
      file_path,
      loadToMemory,
    );
  }

  late final _load_sound_to_slotPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Pointer<ffi.Char>, ffi.Int)>>('load_sound_to_slot');
  late final _load_sound_to_slot = _load_sound_to_slotPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>, int)>();

  /// Returns 1 if the slot successfully has a sound loaded, 0 otherwise.
  int is_slot_loaded(
    int slot,
  ) {
    return _is_slot_loaded(
      slot,
    );
  }

  late final _is_slot_loadedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('is_slot_loaded');
  late final _is_slot_loaded =
      _is_slot_loadedPtr.asFunction<int Function(int)>();

  /// Starts playback of the sound in the given slot. The sound is mixed together
  /// with any other playing slots.
  int play_slot(
    int slot,
  ) {
    return _play_slot(
      slot,
    );
  }

  late final _play_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('play_slot');
  late final _play_slot = _play_slotPtr.asFunction<int Function(int)>();

  /// Stops playback of the sound in the given slot.
  void stop_slot(
    int slot,
  ) {
    return _stop_slot(
      slot,
    );
  }

  late final _stop_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('stop_slot');
  late final _stop_slot = _stop_slotPtr.asFunction<void Function(int)>();

  /// Unloads the sound from the given slot and frees all associated memory.
  void unload_slot(
    int slot,
  ) {
    return _unload_slot(
      slot,
    );
  }

  late final _unload_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('unload_slot');
  late final _unload_slot = _unload_slotPtr.asFunction<void Function(int)>();

  /// Memory usage tracking functions
  int get_total_memory_usage() {
    return _get_total_memory_usage();
  }

  late final _get_total_memory_usagePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'get_total_memory_usage');
  late final _get_total_memory_usage =
      _get_total_memory_usagePtr.asFunction<int Function()>();

  int get_slot_memory_usage(
    int slot,
  ) {
    return _get_slot_memory_usage(
      slot,
    );
  }

  late final _get_slot_memory_usagePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Int)>>(
          'get_slot_memory_usage');
  late final _get_slot_memory_usage =
      _get_slot_memory_usagePtr.asFunction<int Function(int)>();

  int get_memory_slot_count() {
    return _get_memory_slot_count();
  }

  late final _get_memory_slot_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_memory_slot_count');
  late final _get_memory_slot_count =
      _get_memory_slot_countPtr.asFunction<int Function()>();

  /// Memory limit information functions
  int get_max_memory_slots() {
    return _get_max_memory_slots();
  }

  late final _get_max_memory_slotsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_max_memory_slots');
  late final _get_max_memory_slots =
      _get_max_memory_slotsPtr.asFunction<int Function()>();

  int get_max_memory_file_size() {
    return _get_max_memory_file_size();
  }

  late final _get_max_memory_file_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'get_max_memory_file_size');
  late final _get_max_memory_file_size =
      _get_max_memory_file_sizePtr.asFunction<int Function()>();

  int get_max_total_memory_usage() {
    return _get_max_total_memory_usage();
  }

  late final _get_max_total_memory_usagePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'get_max_total_memory_usage');
  late final _get_max_total_memory_usage =
      _get_max_total_memory_usagePtr.asFunction<int Function()>();

  int get_available_memory_capacity() {
    return _get_available_memory_capacity();
  }

  late final _get_available_memory_capacityPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'get_available_memory_capacity');
  late final _get_available_memory_capacity =
      _get_available_memory_capacityPtr.asFunction<int Function()>();

  /// Volume control functions
  int set_sample_bank_volume(
    int bank,
    double volume,
  ) {
    return _set_sample_bank_volume(
      bank,
      volume,
    );
  }

  late final _set_sample_bank_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Float)>>(
          'set_sample_bank_volume');
  late final _set_sample_bank_volume =
      _set_sample_bank_volumePtr.asFunction<int Function(int, double)>();

  double get_sample_bank_volume(
    int bank,
  ) {
    return _get_sample_bank_volume(
      bank,
    );
  }

  late final _get_sample_bank_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
          'get_sample_bank_volume');
  late final _get_sample_bank_volume =
      _get_sample_bank_volumePtr.asFunction<double Function(int)>();
